--- a/index.html
+++ b/index.html
@@ -14,75 +14,73 @@
     <link rel="stylesheet" href="assets/style.css" />
     <title>My Landing Page</title>
   </head>
+
   <body>
-    <nav >
+    <nav>
       <div class="logo">
         <img
-          src="assets/images/smaller_02_davidPic_ff_AmusmentPark copy.jpg"
+          src="assets/images/davidPic_ff_AmusmentPark.jpg"
           alt="David profile Pic"
         />
+        <h2>David Yennerell</h2>
       </div>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Portfolio</a></li>
+        <li>
+          <a href="https://www.linkedin.com/in/david-yennerell-815a471a2/"
+            >Portfolio</a
+          >
+        </li>
         <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact Me</a></li>
       </ul>
     </nav>
 
-    <header>
+    <!-- <div class="notification-container show" id="notifiacation-contianer">
+      <p>Click my icon to get to the menu</p>
+    </div> -->
+    <header id="banner">
       <button id="toggle" class="toggle">
-        <i class="fa fa-hamburger fa-2x"></i>
+        <img src="/assets/images/David logo_01.png" alt="Menu-Button" />
+        <!-- <i class="fa fa-hamburger fa-2x"></i> -->
       </button>
 
-      <h1>My Landing Page</h1>
+      <h1>Want to take a dive into Web-Developement?</h1>
+      <p>"Create with me"</p>
 
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, amet!
-      </p>
-
-      <button class="cta-btn" id="open">Sign Up</button>
+      <button class="cta-btn" id="open">Contact Me!</button>
     </header>
 
     <div class="container">
-      <h2>What is this landing page about?</h2>
+      <h2>Who am I?</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia iure
-        accusamus ab consectetur eos provident ipsa est perferendis architecto.
-        Provident, quaerat asperiores. Quo esse minus repellat sapiente, impedit
-        obcaecati necessitatibus.
+        A young and talented computer nerd who enjoys creating as many things as
+        he can . I experiment with most things I can get my hands on from
+        computers to the garden.I spend my free time learning,discovering and
+        researching .
       </p>
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente optio
-        officia ipsa. Cum dignissimos possimus et non provident facilis saepe!
+        Over the years I have had many hobbies from gardening both indoor and
+        out, building computers and graphic arts but I find myself beginning to
+        enjoy designing applications for the web to broading the communication
+        and ease in the new frontier of web development.
       </p>
 
-      <h2>Tell Me More</h2>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat eaque
-        delectus explicabo qui reprehenderit? Aspernatur ad similique minima
-        accusamus maiores accusantium libero autem iusto reiciendis ullam
-        impedit esse quibusdam, deleniti laudantium rerum beatae, deserunt nemo
-        neque, obcaecati exercitationem sit. Earum.
-      </p>
-
-      <h2>Benefits</h2>
+      <h2>What are my skills?</h2>
       <ul>
-        <li>Lifetime Access</li>
-        <li>30 Day Money Back</li>
-        <li>Tailored Customer Support</li>
+        <li>Problem Solver</li>
+        <li>Team Leader</li>
+        <li>Full-Stack Web Developer</li>
+      </ul>
+
+      <h2>What are my goals?</h2>
+      <ul>
+        <li>Design amazing functioning websites</li>
+        <li>Maintain a healthy and fulfilling life style</li>
+        <li>Teach people valuable life skills</li>
       </ul>
 
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse quam
-        nostrum, fugiat, itaque natus officia laborum dolorum id accusantium
-        culpa architecto tenetur fuga? Consequatur provident rerum eius ratione
-        dolor officiis doloremque minima optio dignissimos doloribus odio
-        debitis vero cumque itaque excepturi a neque, expedita nulla earum
-        accusamus repellat adipisci veritatis quam. Ipsum fugiat iusto pariatur
-        consectetur quas libero dolor dolores dolorem, nostrum ducimus
-        doloremque placeat accusamus iste, culpa quaerat consequatur?
+        There is 
       </p>
     </div>
 
@@ -93,10 +91,10 @@
           <i class="fa fa-times"></i>
         </button>
         <div class="modal-header">
-          <h3>Sign Up</h3>
+          <h3>Contact Me</h3>
         </div>
         <div class="modal-content">
-          <p>Register with us to get offers, support and more</p>
+          <p>Want to get in contact with me?</p>
           <form class="modal-form">
             <div>
               <label for="name">Name</label>
