update-Added portfolio page and added to readMe

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>My Landing Page</title>
   </head>
 
-  <body>
+  <body style="background-color: black;">
     <nav>
       <div class="logo">
         <img
@@ -25,21 +25,22 @@
         <h2>David Yennerell</h2>
       </div>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="/index.html">Home</a></li>
         <li>
           <a href="https://www.linkedin.com/in/david-yennerell-815a471a2/"
-            >Portfolio</a
+            >LinkedIn</a
           >
         </li>
-        <li><a href="#">Blog</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
       </ul>
     </nav>
 
     <!-- <div class="notification-container show" id="notifiacation-contianer">
       <p>Click my icon to get to the menu</p>
     </div> -->
-    <header id="banner">
-      <button id="toggle" class="toggle">
+    <!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - ---- -->
+    <header>
+      <button id="toggle" class="toggle banner">
         <img src="/assets/images/David logo_01.png" alt="Menu-Button" />
         <!-- <i class="fa fa-hamburger fa-2x"></i> -->
       </button>
@@ -80,7 +81,7 @@
       </ul>
 
       <p>
-        There is 
+        There is
       </p>
     </div>
 
