--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="assets/style.css" />
+
     <title>My Landing Page</title>
   </head>
 
@@ -39,8 +41,8 @@
       <p>Click my icon to get to the menu</p>
     </div> -->
     <!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - ---- -->
-    <header>
-      <button id="toggle" class="toggle banner">
+    <header id="banner">
+      <button id="toggle" class="toggle">
         <img src="/assets/images/David logo_01.png" alt="Menu-Button" />
         <!-- <i class="fa fa-hamburger fa-2x"></i> -->
       </button>
@@ -68,20 +70,24 @@
 
       <h2>What are my skills?</h2>
       <ul>
-        <li>Problem Solver</li>
-        <li>Team Leader</li>
-        <li>Full-Stack Web Developer</li>
+        <li>Problem Solving</li>
+        <li>Working with teams and groups</li>
+        <li>Full-Stack Web Developement</li>
       </ul>
 
       <h2>What are my goals?</h2>
       <ul>
-        <li>Design amazing functioning websites</li>
+        <li>Design amazing websites that function</li>
+        <li>Help businesses connect with the community using code</li>
         <li>Maintain a healthy and fulfilling life style</li>
         <li>Teach people valuable life skills</li>
       </ul>
 
       <p>
-        There is
+        There is much more on the way so stay tuned and check in soon! Thank you
+        for taking the time to learn more about me and fill free to email me at
+        <a href="david.yennerell@gmail.com">David.yennerell@gmail.com</a> for
+        business inquiries or just to chat.
       </p>
     </div>
 
@@ -92,7 +98,10 @@
           <i class="fa fa-times"></i>
         </button>
         <div class="modal-header">
-          <h3>Contact Me</h3>
+          <h3>
+            Contact Me @
+            <a href="david.yennerell@gmail.com">david.yennerell@gmail.com</a>
+          </h3>
         </div>
         <div class="modal-content">
           <p>Want to get in contact with me?</p>
