UPDATE: Fully completed homepage and almost completed portfolio Page

--- a/index.html
+++ b/index.html
@@ -52,45 +52,46 @@
 
       <button class="cta-btn" id="open">Contact Me!</button>
     </header>
+    <div class="full-container">
+      <div class="container">
+        <h2>Who am I?</h2>
+        <p>
+          A young and talented computer nerd who enjoys creating as many things
+          as he can . I experiment with most things I can get my hands on from
+          computers to the garden.I spend my free time learning,discovering and
+          researching .
+        </p>
+        <p>
+          Over the years I have had many hobbies from gardening both indoor and
+          out, building computers and graphic arts but I find myself beginning
+          to enjoy designing applications for the web to broading the
+          communication and ease in the new frontier of web development.
+        </p>
 
-    <div class="container">
-      <h2>Who am I?</h2>
-      <p>
-        A young and talented computer nerd who enjoys creating as many things as
-        he can . I experiment with most things I can get my hands on from
-        computers to the garden.I spend my free time learning,discovering and
-        researching .
-      </p>
-      <p>
-        Over the years I have had many hobbies from gardening both indoor and
-        out, building computers and graphic arts but I find myself beginning to
-        enjoy designing applications for the web to broading the communication
-        and ease in the new frontier of web development.
-      </p>
+        <h2>What are my skills?</h2>
+        <ul>
+          <li>Problem Solving</li>
+          <li>Working with teams and groups</li>
+          <li>Full-Stack Web Developement</li>
+        </ul>
 
-      <h2>What are my skills?</h2>
-      <ul>
-        <li>Problem Solving</li>
-        <li>Working with teams and groups</li>
-        <li>Full-Stack Web Developement</li>
-      </ul>
+        <h2>What are my goals?</h2>
+        <ul>
+          <li>Design amazing websites that function</li>
+          <li>Help businesses connect with the community using code</li>
+          <li>Maintain a healthy and fulfilling life style</li>
+          <li>Teach people valuable life skills</li>
+        </ul>
 
-      <h2>What are my goals?</h2>
-      <ul>
-        <li>Design amazing websites that function</li>
-        <li>Help businesses connect with the community using code</li>
-        <li>Maintain a healthy and fulfilling life style</li>
-        <li>Teach people valuable life skills</li>
-      </ul>
-
-      <p>
-        There is much more on the way so stay tuned and check in soon! Thank you
-        for taking the time to learn more about me and fill free to email me at
-        <a href="david.yennerell@gmail.com">David.yennerell@gmail.com</a> for
-        business inquiries or just to chat.
-      </p>
+        <p>
+          There is much more on the way so stay tuned and check in soon! Thank
+          you for taking the time to learn more about me and fill free to email
+          me at
+          <a href="david.yennerell@gmail.com">David.yennerell@gmail.com</a> for
+          business inquiries or just to chat.
+        </p>
+      </div>
     </div>
-
     <!-- Modal -->
     <div class="modal-container" id="modal">
       <div class="modal">
@@ -99,12 +100,12 @@
         </button>
         <div class="modal-header">
           <h3>
-            Contact Me @
+            Email Me @
             <a href="david.yennerell@gmail.com">david.yennerell@gmail.com</a>
           </h3>
         </div>
         <div class="modal-content">
-          <p>Want to get in contact with me?</p>
+          <p><strong>Want to get in contact with me?</strong></p>
           <form class="modal-form">
             <div>
               <label for="name">Name</label>
@@ -124,24 +125,7 @@
                 class="form-input"
               />
             </div>
-            <div>
-              <label for="password">Password</label>
-              <input
-                type="password"
-                id="password"
-                placeholder="Enter Password"
-                class="form-input"
-              />
-            </div>
-            <div>
-              <label for="password2">Confirm Password</label>
-              <input
-                type="password"
-                id="password2"
-                placeholder="Confirm Password"
-                class="form-input"
-              />
-            </div>
+
             <input type="submit" value="Submit" class="submit-btn" />
           </form>
         </div>
