lopgo picture should work now

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - ---- -->
     <header id="banner">
       <button id="toggle" class="toggle">
-        <img src="/assets/images/David logo_01.png" alt="Menu-Button" />
+        <img src="/assets/images/DavidLogo_01.png" alt="Menu-Button" />
         <!-- <i class="fa fa-hamburger fa-2x"></i> -->
       </button>
 
