Finalized all pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
 
     <title>My Landing Page</title>
   </head>
@@ -57,9 +57,9 @@
         <h2>Who am I?</h2>
         <p>
           A young and talented computer nerd who enjoys creating as many things
-          as he can . I experiment with most things I can get my hands on from
-          computers to the garden.I spend my free time learning,discovering and
-          researching .
+          as he can. An experimenter with most things he can get his hands on
+          ranging from computers to the garden.He spends his free time learning
+          new things, planning for the future.
         </p>
         <p>
           Over the years I have had many hobbies from gardening both indoor and
@@ -70,8 +70,9 @@
 
         <h2>What are my skills?</h2>
         <ul>
+          <li>Marketing</li>
           <li>Problem Solving</li>
-          <li>Working with teams and groups</li>
+          <li>Working with teams/groups</li>
           <li>Full-Stack Web Developement</li>
         </ul>
 
@@ -132,6 +133,6 @@
       </div>
     </div>
 
-    <script src="assets/script.js"></script>
+    <script src="/assets/js/script.js"></script>
   </body>
 </html>
