--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="/assets/css/stylePortfolio.css" />
   </head>
   <body>
     <nav>
@@ -32,31 +32,139 @@
     <!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - ---- -->
     <header>
       <button id="toggle" class="toggle banner">
-        <img src="/assets/images/David logo_01.png" alt="Menu-Button" />
+        <img src="/assets/images/DavidLogo_01.png" alt="Menu-Button" />
         <!-- <i class="fa fa-hamburger fa-2x"></i> -->
       </button>
 
       <h1>A few projects I have worked on here.</h1>
+
       <p>"Create with me"</p>
+
+      <button class="cta-btn" id="open">Contact Me!</button>
     </header>
+    <div class="full-container">
+      <div class="container">
+        <h2>
+          <a
+            href="https://williamntrout.github.io/project-1-refrigerator-companion/"
+            >What's For Dinner Application -UNFINISHED</a
+          >
+        </h2>
+        <p>
+          I eventually will have a full working recipe and cooking application
+          allowing the user to search up not only what to cook but how to cook.
+        </p>
+        <h2>
+          <a href="https://granderojo17.github.io/my-weather-app/"
+            >What's The Weather Application- UNFINISHED</a
+          >
+        </h2>
+        <p>
+          I eventually will have a full working weather application allowing the
+          user either using their own location or specifying another one to see
+          the daily and weekly forecast of the weather using a weather API.
+        </p>
 
-    <div class="container">
-      <h2>Who am I?</h2>
-      <p>
-        A young and talented computer nerd who enjoys creating as many things as
-        he can . I experiment with most things I can get my hands on from
-        computers to the garden.I spend my free time learning,discovering and
-        researching .
-      </p>
+        <h2>
+          <a
+            href="https://granderojo17.github.io/DOM-Manipulators_RandomPeopleList/"
+            >Working With API's #01</a
+          >
+        </h2>
+        <p>
+          In this application not only did I get to work with another
+          API(aplication Programming Interface) I got to experiment with more
+          Javascipt and high order array functions.. a.k.a list's of data.
+        </p>
 
-      <h2>What are my skills?</h2>
-      <ul>
-        <li>Problem Solver</li>
-        <li>Team Leader</li>
-        <li>Full-Stack Web Developer</li>
-      </ul>
+        <h2>
+          <a href="https://github.com/GrandeRojo17/homework_Calander"
+            >To-Do List Application</a
+          >
+        </h2>
+        <p>
+          We begin diving deeper into javascript and actually writing code that
+          does something. I am still working on this application.
+        </p>
+        <h2>
+          <a href="https://granderojo17.github.io/homework-04-quiz/"
+            >Pop Quiz App</a
+          >
+        </h2>
+        <p>
+          I had to design a small pop quiz application that will test your
+          knowledge on a few random topics. Who wants to be a millionaire!?
+        </p>
+
+        <h2>
+          <a href="https://granderojo17.github.io/passwordGenerator/"
+            >Password Generator</a
+          >
+        </h2>
+        <p>
+          After a few weeks of understanding HTML and CSS we had to dive into
+          Javascript and how to functionality to a website. In this case you
+          will be guided through a couple window prompts to generate your own
+          unique password, just don't forget to write it down!
+        </p>
+
+        <h2>
+          <a href="https://granderojo17.github.io/ku-bootcamp-HOMEWORK-02/"
+            >First Website</a
+          >
+        </h2>
+        <p>
+          One of my very first projects I ever worked on with absolutly no
+          experience writing code other than a little python that I had written
+          here and there.
+        </p>
+        <!-- ------------------------------------------------------------------------------------------------- -->
+        <h2>v TLDR Links v</h2>
+        <ul>
+          <li>
+            <a href="https://granderojo17.github.io/ku-bootcamp-HOMEWORK-02/"
+              >First Website</a
+            >
+          </li>
+          <li>
+            <a href="https://granderojo17.github.io/passwordGenerator/"
+              >Password Generator</a
+            >
+          </li>
+
+          <li>
+            <a href="https://granderojo17.github.io/homework-04-quiz/"
+              >Pop Quiz App</a
+            >
+          </li>
+          <li>
+            <a href="https://github.com/GrandeRojo17/homework_Calander"
+              >TO-DO List Application
+            </a>
+          </li>
+
+          <li>
+            <a
+              href="https://granderojo17.github.io/DOM-Manipulators_RandomPeopleList/"
+              >Working With API's #01</a
+            >
+          </li>
+
+          <li>
+            <a href="https://granderojo17.github.io/my-weather-app/"
+              >What's The Weather Application- UNFINISHED</a
+            >
+          </li>
+
+          <li>
+            <a
+              href="https://williamntrout.github.io/project-1-refrigerator-companion/"
+              >What's For Dinner Application -UNFINISHED</a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
-
-    <script src="assets/script.js"></script>
+    <script src="/assets/js/script.js"></script>
   </body>
 </html>
