--- a/index.html
+++ b/index.html
@@ -56,16 +56,17 @@
       <div class="container">
         <h2>Who am I?</h2>
         <p>
-          A young and talented computer nerd who enjoys creating as many things
-          as he can. An experimenter with most things he can get his hands on
-          ranging from computers to the garden.He spends his free time learning
-          new things, planning for the future.
+          I am young and talented computer nerd who enjoys creating as many
+          things as humanily possible. I will experiment with most things I can
+          get my hands on ranging from computers to my garden. I spend my time
+          learning new things and planning for my future.
         </p>
         <p>
-          Over the years I have had many hobbies from gardening both indoor and
-          out, building computers and graphic arts but I find myself beginning
-          to enjoy designing applications for the web to broading the
-          communication and ease in the new frontier of web development.
+          Over the years I have had many hobbies from gardening to building
+          computers and even graphic arts. Although now, I enjoy designing
+          applications for the web, broadening my communication skills, and
+          building applications to make life easier. I find the "new frontier"
+          that is web development a fun and worthwhile experience.
         </p>
 
         <h2>What are my skills?</h2>
@@ -85,10 +86,10 @@
         </ul>
 
         <p>
-          There is much more on the way so stay tuned and check in soon! Thank
-          you for taking the time to learn more about me and fill free to email
-          me at
-          <a href="david.yennerell@gmail.com">David.yennerell@gmail.com</a> for
+          There is much more on the way so stay tuned and check back in soon!
+          Thank you for taking the time to learn more about me and fill free to
+          email me at through
+          <a href="GrandeKnowledge.com">David.yennerell@gmail.com</a> for
           business inquiries or just to chat.
         </p>
       </div>
