--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/style.css" />
 
     <title>My Landing Page</title>
   </head>
@@ -27,7 +27,7 @@
         <h2>David Yennerell</h2>
       </div>
       <ul>
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li>
           <a href="https://www.linkedin.com/in/david-yennerell-815a471a2/"
             >LinkedIn</a
@@ -43,7 +43,7 @@
     <!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - ---- -->
     <header id="banner">
       <button id="toggle" class="toggle">
-        <img src="/assets/images/DavidLogo_01.png" alt="Menu-Button" />
+        <img src="/assets/DavidLogo_01.png" alt="Menu-Button" />
         <!-- <i class="fa fa-hamburger fa-2x"></i> -->
       </button>
 
@@ -103,7 +103,7 @@
         <div class="modal-header">
           <h3>
             Email Me @
-            <a href="david.yennerell@gmail.com">david.yennerell@gmail.com</a>
+            <a href="grandeknowledge.com">david.yennerell@gmail.com</a>
           </h3>
         </div>
         <div class="modal-content">
@@ -134,6 +134,6 @@
       </div>
     </div>
 
-    <script src="/assets/js/script.js"></script>
+    <script src="/assets/script.js"></script>
   </body>
 </html>
