got the css to finally work

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="/assets/css/stylePortfolio.css" />
+    <link
+      rel="stylesheet"
+      href="https://granderojo17.github.io/PersonalizedWebSite02/assets/css/stylePortfolio.css"
+    />
   </head>
   <body>
     <nav>
