--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="/assets/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://granderojo17.github.io/PersonalizedWebSite02/assets/style.css"
+    />
 
     <title>My Landing Page</title>
   </head>
