JS should work now

--- a/portfolio.html
+++ b/portfolio.html
@@ -168,6 +168,6 @@
         </ul>
       </div>
     </div>
-    <script src="/assets/js/script.js"></script>
+    <script src="https://granderojo17.github.io/PersonalizedWebSite02/assets/js/script.js"></script>
   </body>
 </html>
