--- a/index.html
+++ b/index.html
@@ -137,6 +137,6 @@
       </div>
     </div>
 
-    <script src="/assets/script.js"></script>
+    <script src="https://granderojo17.github.io/PersonalizedWebSite02/assets/script.js"></script>
   </body>
 </html>
