--- a/portfolio.html
+++ b/portfolio.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
       href="https://granderojo17.github.io/PersonalizedWebSite02/assets/css/stylePortfolio.css"
+      integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
+      crossorigin="anonymous"
     />
+    <title>Portfolio</title>
   </head>
+
   <body>
     <nav>
       <div class="logo">
