Another attempt to fix the site not finding some sites and images

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
         <h2>David Yennerell</h2>
       </div>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li>
+          <a href="https://granderojo17.github.io/PersonalizedWebSite02/"
+            >Home</a
+          >
+        </li>
         <li>
           <a href="https://www.linkedin.com/in/david-yennerell-815a471a2/"
             >LinkedIn</a
@@ -46,7 +50,10 @@
     <!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - ---- -->
     <header id="banner">
       <button id="toggle" class="toggle">
-        <img src="/assets/DavidLogo_01.png" alt="Menu-Button" />
+        <img
+          src="https://granderojo17.github.io/PersonalizedWebSite02/assets/DavidLogo_01.png"
+          alt="Menu-Button"
+        />
         <!-- <i class="fa fa-hamburger fa-2x"></i> -->
       </button>
 
