--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,11 @@
             >LinkedIn</a
           >
         </li>
-        <li><a href="./portfolio.html">Portfolio</a></li>
+        <li>
+          <a href="https://granderojo17.github.io/PersonalizedWebSite02/"
+            >Portfolio</a
+          >
+        </li>
       </ul>
     </nav>
 
@@ -39,7 +43,10 @@
     <!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - ---- -->
     <header>
       <button id="toggle" class="toggle banner">
-        <img src="/assets/images/DavidLogo_01.png" alt="Menu-Button" />
+        <img
+          src="https://granderojo17.github.io/PersonalizedWebSite02/assets/images/DavidLogo_01.png"
+          alt="Menu-Button"
+        />
         <!-- <i class="fa fa-hamburger fa-2x"></i> -->
       </button>
 
