--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="https://granderojo17.github.io/PersonalizedWebSite02/assets/css/stylePortfolio.css"
+      href="./assets/css/stylePortfolio.css"
       integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
       crossorigin="anonymous"
     />
@@ -43,10 +43,7 @@
     <!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - ---- -->
     <header>
       <button id="toggle" class="toggle banner">
-        <img
-          src="https://granderojo17.github.io/PersonalizedWebSite02/assets/images/DavidLogo_01.png"
-          alt="Menu-Button"
-        />
+        <img src="./assets/images/DavidLogo_01.png" alt="Menu-Button" />
         <!-- <i class="fa fa-hamburger fa-2x"></i> -->
       </button>
 
