--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="./assets/css/stylePortfolio.css"
-      integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
-      crossorigin="anonymous"
+      href="https://granderojo17.github.io/PersonalizedWebSite02/assets/stylePortfolio.css"
     />
     <title>Portfolio</title>
   </head>
