Updated: 05-05-2020 Should finally be working!

--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
     <!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - ---- -->
     <header id="banner">
       <button id="toggle" class="toggle">
-        <img
-          src="https://granderojo17.github.io/PersonalizedWebSite02/assets/DavidLogo_01.png"
-          alt="Menu-Button"
-        />
+        <img src="./assets/DavidLogo_01.png" alt="Menu-Button" />
         <!-- <i class="fa fa-hamburger fa-2x"></i> -->
       </button>
 
@@ -144,6 +141,6 @@
       </div>
     </div>
 
-    <script src="https://granderojo17.github.io/PersonalizedWebSite02/assets/script.js"></script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
