--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>My Landing Page</title>
 </head>
 
-<body>
+<body id="body">
   <nav>
     <div class="logo">
       <img src="assets/images/davidPic_ff_AmusmentPark.jpg" alt="David profile Pic" />
