Created one style sheet to rule them all -Updated the portfolio page to now include a link to the workin app and also a link to the github

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <button id="toggle" class="toggle">
         <img src="./assets/DavidLogo_01.png" alt="Menu-Button" />
         <!-- <i class="fa fa-hamburger fa-2x"></i> -->
+        menu
       </button>
-
       <h1>Want to take a dive into Web-Developement?</h1>
       <p>"Create with me"</p>
 
@@ -104,8 +104,11 @@
         </button>
         <div class="modal-header">
           <h3>
-            Email Me @
-            <a href="grandeknowledge.com">david.yennerell@gmail.com</a>
+            Contact Me @
+            <a href="https://www.linkedin.com/in/david-yennerell-815a471a2/"
+              >linkedIn</a
+            >
+            or below
           </h3>
         </div>
         <div class="modal-content">
