--- a/portfolio2.html
+++ b/portfolio2.html
@@ -1,3 +1,4 @@
+<!-- started 4/27/20-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,12 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="https://granderojo17.github.io/PersonalizedWebSite02/assets/stylePortfolio.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+      integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
+      crossorigin="anonymous"
     />
-    <title>Portfolio</title>
+
+    <link rel="stylesheet" href="assets/style.css" />
+
+    <title>Portfolio Page</title>
   </head>
 
-  <body>
+  <body id="boody">
     <nav>
       <div class="logo">
         <img
@@ -21,17 +27,15 @@
         <h2>David Yennerell</h2>
       </div>
       <ul>
-        <li><a href="/index.html">Home</a></li>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
         <li>
           <a href="https://www.linkedin.com/in/david-yennerell-815a471a2/"
             >LinkedIn</a
           >
         </li>
-        <li>
-          <a href="https://granderojo17.github.io/PersonalizedWebSite02/"
-            >Portfolio</a
-          >
-        </li>
+        <li><a href="portfolio.html">Portfolio</a></li>
       </ul>
     </nav>
 
@@ -39,20 +43,31 @@
       <p>Click my icon to get to the menu</p>
     </div> -->
     <!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - ---- -->
-    <header>
-      <button id="toggle" class="toggle banner">
-        <img src="./assets/images/DavidLogo_01.png" alt="Menu-Button" />
+    <header id="banner">
+      <button id="toggle" class="toggle">
+        <img src="./assets/DavidLogo_01.png" alt="Menu-Button" />
         <!-- <i class="fa fa-hamburger fa-2x"></i> -->
+        menu
       </button>
-
-      <h1>A few projects I have worked on here.</h1>
-
-      <p>"Create with me"</p>
+      <h1>Portfoio Below</h1>
+      <p>"Click the link to be directed to application!"</p>
 
       <button class="cta-btn" id="open">Contact Me!</button>
     </header>
     <div class="full-container">
       <div class="container">
+        <h2>
+          <a href="https://github.com/GrandeRojo17/readMeGenerator"
+            >ReadMe Generator</a
+          >
+        </h2>
+        <p>
+          I eventually will have a full working recipe and cooking application
+          allowing the user to search up not only what to cook but how to cook.
+        </p>
+        <a href="https://github.com/GrandeRojo17/readMeGenerator"
+          >Github link</a
+        >
         <h2>
           <a
             href="https://williamntrout.github.io/project-1-refrigerator-companion/"
@@ -63,16 +78,21 @@
           I eventually will have a full working recipe and cooking application
           allowing the user to search up not only what to cook but how to cook.
         </p>
+        <a
+          href="https://github.com/williamntrout/project-1-refrigerator-companion"
+          >Github link</a
+        >
         <h2>
           <a href="https://granderojo17.github.io/my-weather-app/"
-            >What's The Weather Application- UNFINISHED</a
+            >What's The Weather Application</a
           >
         </h2>
         <p>
-          I eventually will have a full working weather application allowing the
-          user either using their own location or specifying another one to see
-          the daily and weekly forecast of the weather using a weather API.
+          A fully functional weather application allowing the user either using
+          their own location or specifying another one to see the daily and
+          weekly forecast of the weather using a weather API.
         </p>
+        <a href="https://github.com/GrandeRojo17/my-weather-app">Github link</a>
 
         <h2>
           <a
@@ -85,7 +105,10 @@
           API(aplication Programming Interface) I got to experiment with more
           Javascipt and high order array functions.. a.k.a list's of data.
         </p>
-
+        <a
+          href="https://github.com/GrandeRojo17/DOM-Manipulators_RandomPeopleList"
+          >Github link</a
+        >
         <h2>
           <a href="https://github.com/GrandeRojo17/homework_Calander"
             >To-Do List Application</a
@@ -95,6 +118,9 @@
           We begin diving deeper into javascript and actually writing code that
           does something. I am still working on this application.
         </p>
+        <a href="https://github.com/GrandeRojo17/homework_Calander"
+          >Github link</a
+        >
         <h2>
           <a href="https://granderojo17.github.io/homework-04-quiz/"
             >Pop Quiz App</a
@@ -104,7 +130,9 @@
           I had to design a small pop quiz application that will test your
           knowledge on a few random topics. Who wants to be a millionaire!?
         </p>
-
+        <a href="https://github.com/GrandeRojo17/homework-04-quiz"
+          >Github link</a
+        >
         <h2>
           <a href="https://granderojo17.github.io/passwordGenerator/"
             >Password Generator</a
@@ -116,7 +144,9 @@
           will be guided through a couple window prompts to generate your own
           unique password, just don't forget to write it down!
         </p>
-
+        <a href="https://github.com/GrandeRojo17/passwordGenerator"
+          >Github link</a
+        >
         <h2>
           <a href="https://granderojo17.github.io/ku-bootcamp-HOMEWORK-02/"
             >First Website</a
@@ -127,6 +157,9 @@
           experience writing code other than a little python that I had written
           here and there.
         </p>
+        <a href="https://github.com/GrandeRojo17/ku-bootcamp-HOMEWORK-02"
+          >Github link</a
+        >
         <!-- ------------------------------------------------------------------------------------------------- -->
         <h2>v TLDR Links v</h2>
         <ul>
@@ -161,7 +194,7 @@
 
           <li>
             <a href="https://granderojo17.github.io/my-weather-app/"
-              >What's The Weather Application- UNFINISHED</a
+              >What's The Weather Application</a
             >
           </li>
 
@@ -171,9 +204,57 @@
               >What's For Dinner Application -UNFINISHED</a
             >
           </li>
+          <li>
+            <a href="https://github.com/GrandeRojo17/readMeGenerator"
+              >ReadMe File Generator</a
+            >
+          </li>
         </ul>
       </div>
     </div>
-    <script src="https://granderojo17.github.io/PersonalizedWebSite02/assets/js/script.js"></script>
+    <!-- Modal -->
+    <div class="modal-container" id="modal">
+      <div class="modal">
+        <button class="close-btn" id="close">
+          <i class="fa fa-times"></i>
+        </button>
+        <div class="modal-header">
+          <h3>
+            Contact Me @
+            <a href="https://www.linkedin.com/in/david-yennerell-815a471a2/"
+              >linkedIn</a
+            >
+            or below
+          </h3>
+        </div>
+        <div class="modal-content">
+          <p><strong>Want to get in contact with me?</strong></p>
+          <form class="modal-form">
+            <div>
+              <label for="name">Name</label>
+              <input
+                type="text"
+                id="name"
+                placeholder="Enter Name"
+                class="form-input"
+              />
+            </div>
+            <div>
+              <label for="email">Email</label>
+              <input
+                type="email"
+                id="email"
+                placeholder="Enter Email"
+                class="form-input"
+              />
+            </div>
+
+            <input type="submit" value="Submit" class="submit-btn" />
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <script src="./assets/script.js"></script>
   </body>
 </html>
