--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             >LinkedIn</a
           >
         </li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="portfolio2.html">Portfolio</a></li>
       </ul>
     </nav>
 
